// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly StickersImage with bike image 1`] = `
<View
  ref={null}
  style={
    {
      "flex": 1,
    }
  }
>
  <Image
    ref={null}
    resizeMode="contain"
    source={
      {
        "testUri": "../../../assets/images/stickers/bike.png",
      }
    }
    style={
      {
        "alignSelf": "center",
        "height": 275,
        "marginVertical": 20,
        "maxWidth": 320,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`renders correctly StickersImage with earth image 1`] = `
<View
  ref={null}
  style={
    {
      "flex": 1,
    }
  }
>
  <Image
    ref={null}
    resizeMode="contain"
    source={
      {
        "testUri": "../../../assets/images/stickers/earth.png",
      }
    }
    style={
      {
        "alignSelf": "center",
        "height": 275,
        "marginVertical": 20,
        "maxWidth": 320,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`renders correctly StickersImage with restaurant image 1`] = `
<View
  ref={null}
  style={
    {
      "flex": 1,
    }
  }
>
  <Image
    ref={null}
    resizeMode="contain"
    source={
      {
        "testUri": "../../../assets/images/stickers/restaurant.png",
      }
    }
    style={
      {
        "alignSelf": "center",
        "height": 275,
        "marginVertical": 20,
        "maxWidth": 320,
        "width": "100%",
      }
    }
  />
</View>
`;
